<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="38sp"
        android:textAlignment="center"
        style="@style/HomeScreenSpacing"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HomeScreenButtonSpacing"
        android:text="@string/start"/>
    <Button
        android:id="@+id/credits_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HomeScreenButtonSpacing"
        android:text="@string/game_credits"/>

</LinearLayout>